{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1734,
  "lineage": "5e2bfd88-e14a-dc34-fcf3-e8a71f897e81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:124355669181:loadbalancer/app/alb-internal/ac1e68a8f7259f97",
            "arn_suffix": "app/alb-internal/ac1e68a8f7259f97",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-alb-internal-1960654250.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:124355669181:loadbalancer/app/alb-internal/ac1e68a8f7259f97",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b16a25c29f0e6ebf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0112b7f0e0227f438"
              },
              {
                "subnet_id": "subnet-03b53644fc5e43ba4"
              }
            ],
            "subnets": [
              "subnet-0112b7f0e0227f438",
              "subnet-03b53644fc5e43ba4"
            ],
            "tags": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg-lab4",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:124355669181:listener/app/alb-internal/ac1e68a8f7259f97/397baf8b137220f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:124355669181:targetgroup/internal-alb-tg/90ac222e1375d469",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:124355669181:listener/app/alb-internal/ac1e68a8f7259f97/397baf8b137220f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:124355669181:loadbalancer/app/alb-internal/ac1e68a8f7259f97",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-internal",
            "aws_lb_target_group.internal_alb_target_group",
            "aws_security_group.alb-sg-lab4",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:124355669181:targetgroup/internal-alb-tg/90ac222e1375d469",
            "arn_suffix": "targetgroup/internal-alb-tg/90ac222e1375d469",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/salud",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:124355669181:targetgroup/internal-alb-tg/90ac222e1375d469",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:124355669181:loadbalancer/app/alb-internal/ac1e68a8f7259f97"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internal-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "InternalALB-TG"
            },
            "tags_all": {
              "Name": "InternalALB-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg-lab4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:security-group/sg-0b16a25c29f0e6ebf",
            "description": "Security group for ALB allowing HTTPS traffic from Auto Scaling group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b16a25c29f0e6ebf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from Auto Scaling group",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from Auto Scaling group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-lab4",
            "name_prefix": "",
            "owner_id": "124355669181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cache-sg-lab4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:security-group/sg-0468a054fade63713",
            "description": "Security group for cache allowing access from Auto Scaling group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0468a054fade63713",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Memcached traffic from Auto Scaling group",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Redis traffic from Auto Scaling group",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "cache-sg-lab4",
            "name_prefix": "",
            "owner_id": "124355669181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg-lab4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:security-group/sg-0068623e0ea6ac68c",
            "description": "Security group for EC2 with HTTP, PostgreSQL, and cache access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0068623e0ea6ac68c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cache Memcached",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0468a054fade63713"
                ],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [],
                "description": "Cache Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0468a054fade63713"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b16a25c29f0e6ebf"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b16a25c29f0e6ebf"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098ecbaca23d6587b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ec2-sg-lab4",
            "name_prefix": "",
            "owner_id": "124355669181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg-lab4",
            "aws_security_group.cache-sg-lab4",
            "aws_security_group.rds-sg-lab4",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-sg-lab4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:security-group/sg-0b90556cd6ac8c21e",
            "description": "Security group for EFS allowing NFS access from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b90556cd6ac8c21e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow NFS from EC2",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg-lab4",
            "name_prefix": "",
            "owner_id": "124355669181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg-lab4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:security-group/sg-098ecbaca23d6587b",
            "description": "Security group for RDS allowing PostgreSQL traffic from Auto Scaling group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098ecbaca23d6587b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow PostgreSQL from Auto Scaling group",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg-lab4",
            "name_prefix": "",
            "owner_id": "124355669181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:network-acl/acl-04d2f03a1becfda0b",
            "default_network_acl_id": "acl-04d2f03a1becfda0b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04d2f03a1becfda0b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "124355669181",
            "subnet_ids": [
              "subnet-0112b7f0e0227f438",
              "subnet-03b53644fc5e43ba4",
              "subnet-0b244e5c00616ef82",
              "subnet-0de877c3673224d40"
            ],
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-default",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-default",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:route-table/rtb-05145eae9cc8ccf64",
            "default_route_table_id": "rtb-05145eae9cc8ccf64",
            "id": "rtb-05145eae9cc8ccf64",
            "owner_id": "124355669181",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-default",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-default",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:security-group/sg-07ddb72ba63a9f5ae",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07ddb72ba63a9f5ae",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "124355669181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-default",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-default",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4c6166ba7fb04e2",
            "arn": "arn:aws:ec2:us-east-1:124355669181:elastic-ip/eipalloc-0a4c6166ba7fb04e2",
            "association_id": "eipassoc-06a41ffc93e0809d6",
            "domain": "vpc",
            "id": "eipalloc-0a4c6166ba7fb04e2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b5cf0d1c2eab6772",
            "private_dns": "ip-10-0-101-83.ec2.internal",
            "private_ip": "10.0.101.83",
            "public_dns": "ec2-34-200-110-207.compute-1.amazonaws.com",
            "public_ip": "34.200.110.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5447699c4b06aac",
            "arn": "arn:aws:ec2:us-east-1:124355669181:elastic-ip/eipalloc-0e5447699c4b06aac",
            "association_id": "eipassoc-0045473a52d5f9802",
            "domain": "vpc",
            "id": "eipalloc-0e5447699c4b06aac",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aa3fe8fc6804d580",
            "private_dns": "ip-10-0-102-163.ec2.internal",
            "private_ip": "10.0.102.163",
            "public_dns": "ec2-54-226-185-21.compute-1.amazonaws.com",
            "public_ip": "54.226.185.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:internet-gateway/igw-06adb4b45b68d7786",
            "id": "igw-06adb4b45b68d7786",
            "owner_id": "124355669181",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4c6166ba7fb04e2",
            "association_id": "eipassoc-06a41ffc93e0809d6",
            "connectivity_type": "public",
            "id": "nat-0d4238f9c9d62e50d",
            "network_interface_id": "eni-0b5cf0d1c2eab6772",
            "private_ip": "10.0.101.83",
            "public_ip": "34.200.110.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b244e5c00616ef82",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5447699c4b06aac",
            "association_id": "eipassoc-0045473a52d5f9802",
            "connectivity_type": "public",
            "id": "nat-009002864d504bdd2",
            "network_interface_id": "eni-0aa3fe8fc6804d580",
            "private_ip": "10.0.102.163",
            "public_ip": "54.226.185.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de877c3673224d40",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0778eda12b5519af91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d4238f9c9d62e50d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0778eda12b5519af9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0abdb17d74f0488a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-009002864d504bdd2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0abdb17d74f0488a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06adb4b45b68d7786",
            "id": "r-rtb-060201a2734582e661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-060201a2734582e66",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:route-table/rtb-0778eda12b5519af9",
            "id": "rtb-0778eda12b5519af9",
            "owner_id": "124355669181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4238f9c9d62e50d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-private-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-private-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:route-table/rtb-0abdb17d74f0488a5",
            "id": "rtb-0abdb17d74f0488a5",
            "owner_id": "124355669181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-009002864d504bdd2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-private-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-private-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:route-table/rtb-060201a2734582e66",
            "id": "rtb-060201a2734582e66",
            "owner_id": "124355669181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06adb4b45b68d7786",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-public",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-public",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044d413f39dcc70c6",
            "route_table_id": "rtb-0778eda12b5519af9",
            "subnet_id": "subnet-03b53644fc5e43ba4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7f4db44eacb3550",
            "route_table_id": "rtb-0abdb17d74f0488a5",
            "subnet_id": "subnet-0112b7f0e0227f438"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0191d017ef175af83",
            "route_table_id": "rtb-060201a2734582e66",
            "subnet_id": "subnet-0b244e5c00616ef82"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0648ceb4f6abfd464",
            "route_table_id": "rtb-060201a2734582e66",
            "subnet_id": "subnet-0de877c3673224d40"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:subnet/subnet-03b53644fc5e43ba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b53644fc5e43ba4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355669181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-private-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-private-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:subnet/subnet-0112b7f0e0227f438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0112b7f0e0227f438",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355669181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-private-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-private-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:subnet/subnet-0b244e5c00616ef82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b244e5c00616ef82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355669181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-public-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-public-us-east-1a",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:subnet/subnet-0de877c3673224d40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de877c3673224d40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124355669181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5-public-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5-public-us-east-1b",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "vpc_id": "vpc-0971b59e324c4d1a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124355669181:vpc/vpc-0971b59e324c4d1a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d2f03a1becfda0b",
            "default_route_table_id": "rtb-05145eae9cc8ccf64",
            "default_security_group_id": "sg-07ddb72ba63a9f5ae",
            "dhcp_options_id": "dopt-04a1e04c1719957ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0971b59e324c4d1a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05145eae9cc8ccf64",
            "owner_id": "124355669181",
            "tags": {
              "Environment": "Test",
              "Name": "Lab5",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Lab5",
              "Owner": "Javier Manuel",
              "Project": "Lab5"
            }
          }
        }
      ]
    }
  ]
}